# pgsearch

./: .gitignore  CLAUDE.md  SETUP.md  copy-data.ps1  pyproject.toml
.claude/: settings.local.json
pgsearch/: chunker.py  cli.py  config.py  database.py  embedding.py  extractor.py  indexer.py  metadata_loader.py  searcher.py  utils.py
pgsearch/innsyn/: downloader.py  filter.py  models.py  pipeline.py  scraper.py
